--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "regenerator-runtime": "^0.13.3"
   },
   "dependencies": {
-    "fetch-jsonp": "^1.1.3"
+    "fetch-jsonp": "^1.1.3",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
